--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="text" id="extra-value" />
         </div>
       </div>  
-      <button id="add-movie-btn">Add Movie</button>
+      <button id="add-movie-btn">Insert Movie</button>
     </section>
     <section id="filter" class="card">
       <label for="filter-title">Filter by Title</label>
